--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -17,7 +17,7 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v4
       
-      - name: Install Node.js v${{ matrix.node-version }}
+      - name: Install Node.js ${{ matrix.node-version }}
         uses: actions/setup-node@v4
         with:
           node-version: ${{ matrix.node-version }}
@@ -46,3 +46,6 @@ jobs:
 
       - name: Run tests
         run: pnpm test
+
+      - name: Build Docker image
+        run: docker build -t rocketseat-ci-api:latest .
