--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -58,11 +58,16 @@ jobs:
         with:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
-
-      - name: Build Docker image
-        run: docker build -t ${{ secrets.DOCKERHUB_USERNAME }}/rocketseat-ci-api:${{ steps.generate_tag.outputs.sha }} .
-
-      - name: Push Docker image
-        run: docker push ${{ secrets.DOCKERHUB_USERNAME }}/rocketseat-ci-api:${{ steps.generate_tag.outputs.sha }}
-
       
+      - name: Build and push Docker image
+        uses: docker/build-push-action@v5
+        with:
+          push: true
+          tags: ${{ secrets.DOCKERHUB_USERNAME }}/rocketseat-ci-api:latest,${{ secrets.DOCKERHUB_USERNAME }}/rocketseat-ci-api:${{ steps.generate_tag.outputs.sha }}
+
+      # - name: Build Docker image
+      #   run: docker build -t ${{ secrets.DOCKERHUB_USERNAME }}/rocketseat-ci-api:${{ steps.generate_tag.outputs.sha }} .
+
+      # - name: Push Docker image
+      #   run: | 
+      #     docker push ${{ secrets.DOCKERHUB_USERNAME }}/rocketseat-ci-api:${{ steps.generate_tag.outputs.sha }}
