fix: add role to aws credentials config

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -60,7 +60,7 @@ jobs:
       - name: Configure AWS credentials
         uses: aws-actions/configure-aws-credentials@v4
         with:
-          role-to-assume: 'arn:aws:iam::269624241181:role/ecr-role'
+          role-to-assume: arn:aws:iam::269624241181:role/ecr-role
           aws-region: us-east-2
     
       - name: Login to AWS ECR
