--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -67,21 +67,10 @@ jobs:
         id: login-ecr
         uses: aws-actions/amazon-ecr-login@v2
 
-      # - name: Login to Docker Hub
-      #   uses: docker/login-action@v3
-      #   with:
-      #     username: ${{ secrets.DOCKERHUB_USERNAME }}
-      #     password: ${{ secrets.DOCKERHUB_TOKEN }}
-      
-      # - name: Build and push Docker image
-      #   uses: docker/build-push-action@v5
-      #   with:
-      #     push: true
-      #     tags: ${{ secrets.DOCKERHUB_USERNAME }}/rocketseat-ci-api:${{ steps.generate_tag.outputs.sha }},${{ secrets.DOCKERHUB_USERNAME }}/rocketseat-ci-api:latest
-
-      # - name: Build Docker image
-      #   run: docker build -t ${{ secrets.DOCKERHUB_USERNAME }}/rocketseat-ci-api:${{ steps.generate_tag.outputs.sha }} .
-
-      # - name: Push Docker image
-      #   run: | 
-      #     docker push ${{ secrets.DOCKERHUB_USERNAME }}/rocketseat-ci-api:${{ steps.generate_tag.outputs.sha }}
+      - name: Build Docker image
+        env: 
+          REGISTRY: ${{steps.login-ecr.outputs.registry}}
+          TAG: ${{ steps.generate_tag.outputs.sha }}
+        run: | 
+          docker build -t $REGISTRY/docker-ci:$TAG .
+          docker push $REGISTRY/docker-ci:$TAG
