--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -75,10 +75,13 @@ jobs:
         run: | 
           docker build -t $REGISTRY/docker-ci:$TAG .
           docker push $REGISTRY/docker-ci:$TAG
+          docker tag $REGISTRY/docker-ci:$TAG $REGISTRY/docker-ci:latest
+          docker push $REGISTRY/docker-ci:latest
           IMAGE=$(echo $REGISTRY/docker-ci:$TAG)
           echo "image=$IMAGE" >> $GITHUB_OUTPUT
 
       - name: Deploy to App Runner
+        id: deploy-app-runner
         uses: awslabs/amazon-app-runner-deploy@main
         with: 
           service: docker-api
@@ -88,3 +91,6 @@ jobs:
           cpu: 1
           memory: 2
           port: 3000
+
+      - name: App Runner Check
+        run: echo 'App Runner running... ${{ steps.deploy-app-runner.outputs.service-url }}'
