--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -75,7 +75,7 @@ jobs:
         run: | 
           docker build -t $REGISTRY/docker-ci:$TAG .
           docker tag $REGISTRY/docker-ci:$TAG $REGISTRY/docker-ci:latest
-          docker push push $REGISTRY/docker-ci:$TAG,$REGISTRY/docker-ci:latest
+          docker push $REGISTRY/docker-ci:$TAG,$REGISTRY/docker-ci:latest
           IMAGE=$(echo $REGISTRY/docker-ci:$TAG)
           echo "image=$IMAGE" >> $GITHUB_OUTPUT
 
