--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -68,7 +68,7 @@ jobs:
         uses: aws-actions/configure-aws-credentials@v4
         with:
           role-to-assume: ${{ secrets.AWS_CREDENTIALS_ROLE }}
-          aws-region: us-east-2
+          aws-region: ${{ secrets.AWS_REGION }}
     
       - name: Login to AWS ECR
         id: login-ecr
